# alembic-utils-plpgsql

./: .env  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py  extra_entities.py
migrations/resources/: archive.signature  archive.sql
migrations/versions/: 1dbf4d1484d4_test.py  45c0548f96e8_init.py  fef638160f78_test.py
src/: database.py  database_utils.py
