[tool.poetry]
name = "alembic-utils-example"
version = "0.1.0"
description = ""
authors = ["Matt McFahn <mattmcfahn161@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
alembic_utils = "^0.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
variable-rgx = "[a-z_][a-z0-9_]{0,30}$"

[tool.pylint.global]
disable = ["import-error","redefined-outer-name"]
output-format = "colorized"
max-statements=100

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length = 120
indent = '    '
skip = [".tox",".venv","build","dist"]
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = "True"
